updated navigation button size, fixed size change on mobile screens

--- a/app/static/css/custom_style.css
+++ b/app/static/css/custom_style.css
@@ -99,6 +99,7 @@ body {
   /* stroke: var(--header-item); */
 }
 
+.header-left button,
 .header-left a svg {
   width: var(--header-left-item-size);
   height: var(--header-left-item-size);
